# libgateway

./: .gitignore  README.md  configure.ac
src/: Makefile.am  comcerto.c  comcerto.h  dahdi.c  dahdi.h  dsp.c  dsp.h  extensions.c  extensions.h  if.c  if.h  log.h  process.c  process.h  sip.c  sip.h  str.c  str.h  sys_log.c  sys_log.h  system.c  system.h
src/libnetlink/: Makefile.am  libnetlink.h
